resources/css/style.css
/* -------------------------------- */
/* BASIC SETUP */
/* -------------------------------- */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  font-family: "Lato", "Arial", sans-serif;
  line-height: 1.4;
  color: #555;
}

a {
  text-decoration: none;
}

p {
  margin: 0.75rem;
}

h3 {
  font-size: 1.2rem;
  margin-bottom: 1rem;
  font-weight: bold;
  text-align: center;
}

/* Utils classes */

.text-color {
  color: #1abc9c;
}

/* padding */
/* .p-tbxs {
  padding: 0.5rem 0;
}

.p-tbs {
  padding: 1.5rem 0;
} */
.p-tbm {
  padding: 2rem 0;
}
/* .p-tbl {
  padding: 3rem 0;
} */

/* margins */
/* margins top-bottom */
/* .m-tbxs {
  margin: 0.5rem 0;
}

.m-tbs {
  margin: 1.5rem 0;
}
.m-tbm {
  margin: 2rem 0;
}
.m-tbl {
  margin: 3rem 0;
} */

/* margins right-left */
/* .m-rlxs {
  margin: 0 0.5rem;
}

.m-rls {
  margin: 0 1.5rem;
}
.m-rlm {
  margin: 0 2rem;
}
.m-rll {
  margin: 0 3rem;
} */

.t-center {
  text-align: center;
}

.h2-heading {
  font-size: 2rem;
  margin-bottom: 0.75rem;
  text-align: center;
  word-spacing: 0.2rem;
  /* letter-spacing: 0.2rem; */
  font-weight: 300;
}

.h3-heading {
  font-size: 1rem;
  font-weight: bold;
  text-align: center;
  word-spacing: 0.2rem;
  letter-spacing: 0.2rem;
  font-weight: 700;
}

.container {
  max-width: 1100px;
  margin: 0 auto;
  padding: 0 1rem;
  overflow: hidden;
}

/* Navbar  */
#navbar {
  display: flex;
  padding: 1rem;
  justify-content: space-between;
}

#navbar ul {
  display: flex;
  align-items: center;
  list-style: none;
}

#navbar ul li {
  align-items: flex-end;
  list-style: none;
}

#navbar ul li a {
  color: #fff;
  padding: 0.75rem;
  margin: 0 0.25rem;
  font-weight: bold;
  border-bottom: 0.1rem solid transparent;
  transition: border-bottom 0.2s;
}

#navbar ul li a:hover {
  border-bottom: 0.1rem solid #1abc9c;
}

/* header */
header {
  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
    url("../../img/header-background1-min.jpg");
  background-size: cover;
  background-position: center;
  height: 100vh;
  background-attachment: fixed;
}

.content {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  padding: 0 2rem;
  height: 600px;
  color: #fff;
}

header .content .hello {
  display: inline-block;
  background-color: #1abc9c;
  font-size: 0.9rem;
  padding: 0.7rem 1.5rem;
  border-top-left-radius: 0;
  border-top-right-radius: 1.3rem;
  border-bottom-right-radius: 1.3rem;
  border-bottom-left-radius: 1.3rem;
}

header .content h1 {
  font-size: 4rem;
  line-height: 7rem;
}

header .content p {
  font-size: 1.5rem;
  font-weight: bold;
}

/* social media links */

header .content a {
  display: inline;
  color: #fff;
  list-style: none;
}

.icon-social-twitter,
.icon-social-github {
  transition: color 0.2s;
}

.icon-social-twitter:hover {
  color: #00aced;
}

.icon-social-github:hover {
  color: #24292e;
}

header .content div {
  align-self: center;
  margin-top: 5rem;
}

/* bottons and links */

.btn:link,
.btn:visited,
input[type="submit"] {
  display: inline-block;
  padding: 0.5rem 1.6rem;
  text-decoration: none;
  border-radius: 5rem;
}

.btn-full,
input[type="submit"] {
  background-color: #1abc9c;
  border: 1px solid #1abc9c;
  color: #fff;
  margin-right: 1.3rem;
}

.btn-full:hover {
  border: 1px solid #1abc9c;
  background-color: transparent;
  color: #1abc9c;
}

.btn-ghost {
  border: 1px solid #1abc9c;
  color: #1abc9c;
  margin-right: 1rem;
}

.btn-ghost:hover {
  border: 1px solid #1abc9c;
  background-color: #1abc9c;
  color: #fff;
}

/* Section - About */

/* hexagon */
.hexagon {
  position: relative;
  width: 100px;
  height: 57.74px;
  background-color: #33cca7;
  margin: 28.87px 0;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
  color: #fff;
}

.hexagon:before,
.hexagon:after {
  content: "";
  position: absolute;
  z-index: 1;
  width: 70.71px;
  height: 70.71px;
  -webkit-transform: scaleY(0.5774) rotate(-45deg);
  -ms-transform: scaleY(0.5774) rotate(-45deg);
  transform: scaleY(0.5774) rotate(-45deg);
  background-color: inherit;
  left: 14.6447px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
}

.hexagon:before {
  top: -35.3553px;
}

.hexagon:after {
  bottom: -35.3553px;
}

/*cover up extra shadows*/
.hexagon span {
  display: block;
  position: absolute;
  top: 0px;
  left: 0;
  width: 100px;
  height: 57.735px;
  z-index: 2;
  background: inherit;
}

#about .items {
  display: flex;
  padding: 1rem;
}

#about .items .item {
  padding: 1rem;
  flex: 1;
  text-align: center;
}

.about-2 {
  display: flex;
  padding-bottom: 4rem;
}

.about-2 div {
  flex: 1;
  text-align: center;
}

.item .hexagon span {
  font-size: 3rem;
  padding-right: 1.3rem;
  margin-bottom: 3rem;
}

#about a {
  margin: 0.8rem 0;
}

/* projects */

.section-projects {
  background-color: #f4f4f4;
  padding-bottom: 5rem;
}

#project .items {
  display: flex;
}

#project .item {
  background-color: #fff;
  border-radius: 5px;
  width: 90%;
  margin-left: 3%;
  padding: 1rem;
  flex: 1;
  text-align: center;
  box-shadow: 0px 2px 2px #efefef;
}

#project .item li {
  list-style: none;
  text-align: left;
}

#project .item li i {
  color: #1abc9c;
  margin-right: 0.5rem;
}

#project .item img {
  width: 100%;
  height: auto;
  margin-bottom: 0.5rem;
  border: 0.15rem solid;
  border-top: 1px solid rgb(232, 232, 232);
}

#project .item div {
  padding: 1rem;
  border-bottom: 1px solid #e8e8e8;
}

.hori-line {
  border-bottom: 1px solid #e8e8e8;
  padding-bottom: 10px;
}

/* contact section */

.section-contact {
  padding-bottom: 5rem;
}

.container-flex {
  display: flex;
  width: 70%;
  margin: 0 auto;
}

.container-flex div {
  flex: 1 2;
  padding: 0.4rem;
}

input[type="text"],
input[type="email"],
textarea {
  width: 100%;
  padding: 0.7rem;
  border-radius: 0.2rem;
  border: 1px solid #ccc;
}

textarea {
  height: 8rem;
}

*:focus {
  outline: none;
}

/* Footer */

footer {
  background-color: #333;
  padding: 4rem;
  font-size: 90%;
}

footer p {
  color: #888;
  text-align: center;
  margin-top: 20px;
}

